# genetic

./: README.md  flake.nix  genetic.cabal  genetic.nix  package.yaml  shell.nix
src/: Genetic.hs
src/Genetic/: Positive.hs  Strategies.hs  Zipperable.hs
