cabal-version:       >=1.10

name:                genetic
version:             0.1.0.0
license:             GPL-3
author:              jali-clarke
maintainer:          jinnah.ali-clarke@outlook.com
build-type:          Simple

library
  exposed-modules:
    Genetic
  hs-source-dirs: src
  build-depends:
    base >=4.13 && <4.14
    , MonadRandom ==0.5.1.2
    , parallel ==3.2.2.0
    , vector ==0.12.1.2
    , vector-algorithms ==0.8.0.3
  default-language:    Haskell2010
